cabal-version:       3.0
name:                moonlight-egraph
version:             0.1.0.0
synopsis:            Exact e-graph kernel strata for Pale Meridian.
description:
  Canonical higher e-graph package for Pale Meridian. Public sublibraries
  expose relational lowering, the contextual/sheaf-facing layer, homological
  descent helpers, extraction, rewrite support, pure saturation, session
  calculus, reusable benchmark harnesses, and test algebras above
  moonlight-egraph-core.
license:             MIT
author:              Blue Rose
maintainer:          bluerose@example.com
category:            Foundation
build-type:          Simple

common shared-properties
  default-language: GHC2024
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
    -Wpartial-fields
    -Wno-missing-import-lists
  default-extensions:
    ConstraintKinds
    QuantifiedConstraints
    StandaloneDeriving
    StrictData
    UndecidableInstances
    UndecidableSuperClasses

library relational
  import: shared-properties
  visibility: public
  hs-source-dirs: src-relational
  exposed-modules:
    Moonlight.EGraph.Pure.Relational
    Moonlight.EGraph.Pure.Relational.Direct
    Moonlight.EGraph.Pure.Relational.Source
  build-depends:
    base >= 4.18 && < 5
    , containers >= 0.6 && < 0.9
    , vector >= 0.13 && < 0.14
    , moonlight-core
    , moonlight-delta:moonlight-delta-core
    , moonlight-differential:moonlight-differential-index
    , moonlight-egraph-core
    , moonlight-egraph:context
    , moonlight-flow-key
    , moonlight-flow-model:moonlight-flow-model-delta
    , moonlight-flow-model:moonlight-flow-model-schema
    , moonlight-flow-plan
    , moonlight-flow-storage
    , moonlight-flow-execution:moonlight-flow-execution-contract
    , moonlight-flow-execution:moonlight-flow-execution-engine
    , moonlight-saturation
    , moonlight-rewrite:core
    , moonlight-rewrite:algebra
    , moonlight-rewrite:system
    , moonlight-sheaf:descent

test-suite relational-test
  import: shared-properties
  type: exitcode-stdio-1.0
  hs-source-dirs: test/relational
  main-is: Main.hs
  build-depends:
    base >= 4.18 && < 5
    , containers >= 0.6 && < 0.9
    , vector >= 0.13 && < 0.14
    , moonlight-algebra
    , moonlight-core
    , moonlight-delta:moonlight-delta-core
    , moonlight-egraph-core
    , moonlight-egraph:relational
    , moonlight-flow-key
    , moonlight-flow-model:moonlight-flow-model-delta
    , moonlight-flow-model:moonlight-flow-model-schema
    , moonlight-flow-plan
    , moonlight-differential:moonlight-differential-index
    , moonlight-flow-storage
    , moonlight-flow-execution:moonlight-flow-execution-engine
    , moonlight-rewrite:core
    , moonlight-rewrite:algebra
    , moonlight-rewrite:system
    , moonlight-saturation
    , tasty >= 1.4
    , tasty-hunit >= 0.10
    , tasty-quickcheck >= 0.10
    , data-fix >= 0.3 && < 0.4

library context
  import: shared-properties
  visibility: public
  hs-source-dirs: src-context
  exposed-modules:
    Moonlight.EGraph.Sheaf.IncidenceSite
    Moonlight.EGraph.Pure.Context
    Moonlight.EGraph.Pure.Context.Update
    Moonlight.EGraph.Pure.Context.Core
    Moonlight.EGraph.Pure.Context.AnnotatedDelta
    Moonlight.EGraph.Pure.Context.AnnotatedView
    Moonlight.EGraph.Pure.Context.Proof
  other-modules:
    Moonlight.EGraph.Pure.Context.Internal.Store
    Moonlight.EGraph.Pure.Context.Internal.RegionalUnionFind
  build-depends:
    base >= 4.18 && < 5
    , containers >= 0.6 && < 0.9
    , moonlight-algebra
    , moonlight-category
    , moonlight-core
    , moonlight-core:moonlight-core-egraph-program
    , moonlight-egraph-core
    , moonlight-rewrite:core
    , moonlight-rewrite:system
    , moonlight-rewrite:proof-context
    , moonlight-saturation
    , moonlight-category:simplicial
    , moonlight-sheaf:core
    , moonlight-sheaf:obstruction
    , moonlight-sheaf:runtime
    , moonlight-sheaf:descent
    , moonlight-sheaf:site
    , data-fix >= 0.3 && < 0.4
    , transformers >= 0.6 && < 1

    , moonlight-algebra:finite-lattice

library homology
  import: shared-properties
  visibility: public
  hs-source-dirs: src-homology
  exposed-modules:
    Moonlight.EGraph.Homology.Representative
    Moonlight.EGraph.Homology.Gerbe
    Moonlight.EGraph.Homology.Descent
  build-depends:
    base >= 4.18 && < 5
    , containers >= 0.6 && < 0.9
    , moonlight-homology >= 0.1 && < 0.2

library bench-harness
  import: shared-properties
  visibility: public
  hs-source-dirs: src-bench-harness
  exposed-modules:
    Moonlight.EGraph.Bench.Harness.Digest
    Moonlight.EGraph.Bench.Harness.Measure
    Moonlight.EGraph.Bench.Harness.Report
    Moonlight.EGraph.Bench.Harness.Run
  build-depends:
    base >= 4.18 && < 5
    , containers >= 0.6 && < 0.9
    , directory >= 1.3 && < 1.4
    , filepath >= 1.4 && < 1.6
    , moonlight-core
    , moonlight-egraph:context
    , moonlight-egraph-core
    , moonlight-pale:bench
    , moonlight-saturation:core
    , moonlight-sheaf:core
    , moonlight-sheaf:descent

library bench-lib
  import: shared-properties
  visibility: private
  hs-source-dirs: bench/lib
  exposed-modules:
    Moonlight.EGraph.Bench.Corpus
    Moonlight.EGraph.Bench.Harness.Driver
    Moonlight.EGraph.Bench.Harness.Fixture
    Moonlight.EGraph.Bench.Harness.ScaleDigest
    Moonlight.EGraph.Bench.Scale.Chimera
    Moonlight.EGraph.Bench.Scale.SDF
    Moonlight.EGraph.Bench.Scale.Scoped
    Moonlight.EGraph.Bench.Suite
    Moonlight.EGraph.Bench.Suite.Context
    Moonlight.EGraph.Bench.Suite.Context.CaseLiftCore
    Moonlight.EGraph.Bench.Suite.Context.PowersetTwin
    Moonlight.EGraph.Bench.Suite.Context.SheafStress
    Moonlight.EGraph.Bench.Suite.Core
    Moonlight.EGraph.Bench.Suite.Exact.ColoredEGraphs
    Moonlight.EGraph.Bench.Suite.Exact.SlottedEGraphs
    Moonlight.EGraph.Bench.Suite.Exact.Thesy
    Moonlight.EGraph.Bench.Suite.Exact.VersionedEGraphs
    Moonlight.EGraph.Bench.Suite.PureSaturation
    Moonlight.EGraph.Bench.Suite.Relational
  ghc-options: -O2
  build-depends:
    base >= 4.18 && < 5
    , containers >= 0.6 && < 0.9
    , data-fix >= 0.3 && < 0.4
    , deepseq >= 1.4 && < 1.6
    , directory >= 1.3 && < 1.4
    , filepath >= 1.4 && < 1.6
    , hashable >= 1.4 && < 1.6
    , moonlight-control
    , moonlight-core
    , moonlight-delta:moonlight-delta-core
    , moonlight-egraph:bench-harness
    , moonlight-egraph:context
    , moonlight-egraph-core
    , moonlight-egraph:pure-saturation
    , moonlight-egraph:relational
    , moonlight-egraph:test-algebras
    , moonlight-pale:bench
    , moonlight-algebra:finite-lattice
    , moonlight-rewrite:algebra
    , moonlight-rewrite:core
    , moonlight-rewrite:front
    , moonlight-rewrite:proof-context
    , moonlight-rewrite:system
    , moonlight-saturation
    , moonlight-saturation:core
    , moonlight-saturation:protocol
    , moonlight-sheaf:core
    , moonlight-sheaf:descent
    , moonlight-sheaf:obstruction
    , moonlight-sheaf:runtime
    , moonlight-sheaf:site
    , tasty-bench

benchmark moonlight-egraph-bench
  import: shared-properties
  type: exitcode-stdio-1.0
  hs-source-dirs: bench/app
  main-is: SuiteMain.hs
  ghc-options: -O2 -rtsopts
  build-depends:
    base >= 4.18 && < 5
    , moonlight-egraph:bench-harness
    , moonlight-egraph:bench-lib

benchmark chimera-scale-bench
  import: shared-properties
  type: exitcode-stdio-1.0
  hs-source-dirs: bench/app
  main-is: ChimeraScaleMain.hs
  ghc-options: -O2 -rtsopts -with-rtsopts=-T
  build-depends:
    base >= 4.18 && < 5
    , moonlight-egraph:bench-harness
    , moonlight-egraph:bench-lib

benchmark scoped-scale-bench
  import: shared-properties
  type: exitcode-stdio-1.0
  hs-source-dirs: bench/app
  main-is: ScopedScaleMain.hs
  ghc-options: -O2 -rtsopts
  build-depends:
    base >= 4.18 && < 5
    , moonlight-egraph:bench-harness
    , moonlight-egraph:bench-lib

benchmark sdf-scale-bench
  import: shared-properties
  type: exitcode-stdio-1.0
  hs-source-dirs: bench/app
  main-is: SDFScaleMain.hs
  ghc-options: -O2 -rtsopts
  build-depends:
    base >= 4.18 && < 5
    , moonlight-egraph:bench-harness
    , moonlight-egraph:bench-lib

library extraction
  import: shared-properties
  visibility: public
  hs-source-dirs: src-extraction
  exposed-modules:
    Moonlight.EGraph.Pure.AntiUnify
    Moonlight.EGraph.Pure.Extraction.Guide
    Moonlight.EGraph.Pure.Extraction.Rewrite
  build-depends:
    base >= 4.18 && < 5
    , containers >= 0.6 && < 0.9
    , data-fix >= 0.3 && < 0.4
    , moonlight-control
    , moonlight-core
    , moonlight-core:moonlight-core-automata
    , moonlight-core:moonlight-core-syntax
    , moonlight-egraph:context
    , moonlight-egraph-core

library rewrite
  import: shared-properties
  visibility: public
  hs-source-dirs: src-rewrite
  exposed-modules:
    Moonlight.EGraph.Pure.Guard.Evaluation
    Moonlight.EGraph.Pure.Guard.Region
    Moonlight.EGraph.Pure.Rewrite.Env
    Moonlight.EGraph.Pure.Rewrite.Guard
    Moonlight.EGraph.Pure.Rewrite.Instantiate
    Moonlight.EGraph.Pure.Rewrite.Program
  build-depends:
    base >= 4.18 && < 5
    , containers >= 0.6 && < 0.9
    , moonlight-discrete:constraint
    , moonlight-core
    , moonlight-core:moonlight-core-egraph-program
    , moonlight-egraph:context
    , moonlight-egraph-core
    , moonlight-egraph:extraction
    , moonlight-rewrite:core
    , moonlight-rewrite:system
    , moonlight-sheaf:descent
    , transformers >= 0.6 && < 1
    , data-fix >= 0.3 && < 0.4

library pure-saturation
  import: shared-properties
  visibility: public
  hs-source-dirs: src-pure-saturation
  exposed-modules:
    Moonlight.EGraph.Pure.Saturation.Apply
    Moonlight.EGraph.Pure.Saturation.Extraction
    Moonlight.EGraph.Pure.Saturation.Matching
    Moonlight.EGraph.Pure.Saturation.Rebuild.Internal
    Moonlight.EGraph.Saturation.Context.State
    Moonlight.EGraph.Pure.Saturation.Substrate
    Moonlight.EGraph.Pure.Saturation.Substrate.Compile.Query
    Moonlight.EGraph.Pure.Saturation.Front
    Moonlight.EGraph.Pure.Saturation.Front.Binding
    Moonlight.EGraph.Pure.Saturation.Front.Binding.Language
    Moonlight.EGraph.Pure.Saturation.Front.Binding.Scoped
    Moonlight.EGraph.Pure.Saturation.Front.PackedNode
    Moonlight.EGraph.Pure.Saturation.Front.PackedPlan
    Moonlight.EGraph.Pure.Saturation.Logic.Observation
    Moonlight.EGraph.Pure.Saturation.Logic.RunObservation
    Moonlight.EGraph.Pure.Saturation.Logic.Run
    Moonlight.EGraph.Pure.Saturation.Logic.Seed
    Moonlight.EGraph.Pure.Saturation.Guidance
  build-depends:
    base >= 4.18 && < 5
    , bytestring >= 0.11 && < 0.13
    , containers >= 0.6 && < 0.9
    , primitive >= 0.7 && < 0.10
    , moonlight-algebra
    , moonlight-core
    , moonlight-core:moonlight-core-egraph-program
    , moonlight-discrete:constraint
    , moonlight-delta:moonlight-delta-core
    , moonlight-differential:moonlight-differential-runtime
    , moonlight-egraph-core
    , moonlight-egraph:context
    , moonlight-egraph:extraction
    , moonlight-egraph:relational
    , moonlight-egraph:rewrite
    , moonlight-flow-execution:moonlight-flow-execution-contract
    , moonlight-flow-execution:moonlight-flow-execution-engine
    , moonlight-rewrite:core
    , moonlight-rewrite:algebra
    , moonlight-rewrite:front
    , moonlight-rewrite:system
    , moonlight-rewrite:proof-context
    , moonlight-saturation:core
    , moonlight-saturation
    , moonlight-saturation:obstruction
    , moonlight-sheaf:core
    , moonlight-sheaf:cosheaf
    , moonlight-sheaf:runtime
    , moonlight-sheaf:descent
    , moonlight-saturation:protocol
    , moonlight-control
    , moonlight-control:moonlight-control-support
    , moonlight-control:moonlight-control-diagnostics
    , moonlight-control:moonlight-control-homology
    , data-fix >= 0.3 && < 0.4
    , moonlight-algebra:finite-lattice

test-suite pure-saturation-test
  import: shared-properties
  type: exitcode-stdio-1.0
  hs-source-dirs: test/pure-saturation
  main-is: Main.hs
  ghc-options: -Wall -Wcompat
  build-depends:
    base >= 4.18 && < 5
    , containers >= 0.6 && < 0.9
    , data-fix >= 0.3 && < 0.4
    , moonlight-algebra
    , moonlight-core
    , moonlight-delta:moonlight-delta-core
    , moonlight-egraph-core
    , moonlight-egraph:context
    , moonlight-egraph:pure-saturation
    , moonlight-algebra:finite-lattice
    , moonlight-rewrite:core
    , moonlight-rewrite:system
    , moonlight-rewrite:proof-context
    , moonlight-saturation:protocol
    , moonlight-saturation:obstruction
    , tasty >= 1.4
    , tasty-hunit >= 0.10

library session
  import: shared-properties
  visibility: public
  hs-source-dirs: src-session
  exposed-modules:
    Moonlight.EGraph.Pure.Session
    Moonlight.EGraph.Pure.Session.Interpret
  other-modules:
    Moonlight.EGraph.Pure.Session.Internal
  build-depends:
    base >= 4.18 && < 5
    , containers >= 0.6 && < 0.9
    , moonlight-core
    , moonlight-egraph-core
    , moonlight-egraph:extraction
    , data-fix >= 0.3 && < 0.4

test-suite session-test
  import: shared-properties
  type: exitcode-stdio-1.0
  hs-source-dirs: test/session
  main-is: Main.hs
  other-modules:
    Moonlight.EGraph.Pure.Session.CompileSpec
    Moonlight.EGraph.Pure.Session.RuntimeSpec
  build-depends:
    base >= 4.18 && < 5
    , filepath >= 1.4 && < 1.6
    , moonlight-egraph-core
    , moonlight-egraph:session
    , moonlight-pale:diagnostic-ghc
    , tasty >= 1.4
    , tasty-hunit >= 0.10

library test-algebras
  import: shared-properties
  visibility: public
  hs-source-dirs: src-test-algebras
  exposed-modules:
    Moonlight.EGraph.Test.Arith.Core
    Moonlight.EGraph.Test.Arith.Fixture
    Moonlight.EGraph.Test.Arith.Rules
    Moonlight.EGraph.Test.Arith.Cost
    Moonlight.EGraph.Test.Arith.Matcher
    Moonlight.EGraph.Test.Assertions
    Moonlight.EGraph.Test.Chimera.Core
    Moonlight.EGraph.Test.Chimera.Population
    Moonlight.EGraph.Test.Config
    Moonlight.EGraph.Test.Saturation
    Moonlight.EGraph.Test.Saturation.Diagnostics
    Moonlight.EGraph.Test.Scale.Run
    Moonlight.EGraph.Test.Scale.Site
    Moonlight.EGraph.Test.Context.Anatomy
    Moonlight.EGraph.Test.Context.Diamond
    Moonlight.EGraph.Test.Context.MaterializedOracle
    Moonlight.EGraph.Test.Context.Powerset
    Moonlight.EGraph.Test.Context.SimpleArith
    Moonlight.EGraph.Test.Context.ThreeLevel
    Moonlight.EGraph.Test.Context.ThreeLevelArith
    Moonlight.EGraph.Test.Ring.Core
    Moonlight.EGraph.Test.Ring.Rules
    Moonlight.EGraph.Test.SDF.Core
    Moonlight.EGraph.Test.Scoped.Core
    Moonlight.EGraph.Effect.Harness
    Moonlight.EGraph.Effect.LawNames
  build-depends:
    base >= 4.18 && < 5
    , containers >= 0.6 && < 0.9
    , moonlight-algebra
    , moonlight-core
    , moonlight-core:moonlight-core-automata
    , moonlight-egraph-core
    , moonlight-egraph:relational
    , moonlight-egraph:context
    , moonlight-egraph:extraction
    , moonlight-egraph:rewrite
    , moonlight-egraph:pure-saturation
    , moonlight-rewrite:core
    , moonlight-rewrite:system
    , moonlight-rewrite:algebra
    , moonlight-rewrite:proof-context
    , moonlight-saturation
    , moonlight-saturation:core
    , moonlight-sheaf:core
    , moonlight-sheaf:obstruction
    , moonlight-sheaf:runtime
    , moonlight-sheaf:descent
    , moonlight-pale:diagnostic
    , moonlight-pale:test
    , tasty >= 1.4
    , tasty-hunit >= 0.10
    , tasty-quickcheck >= 0.10
    , QuickCheck >= 2.14
    , moonlight-saturation:protocol
    , moonlight-control
    , moonlight-control:moonlight-control-support
    , moonlight-control:moonlight-control-diagnostics
    , moonlight-control:moonlight-control-homology
    , data-fix >= 0.3 && < 0.4
    , moonlight-algebra:finite-lattice

executable egraph-product-baseline
  import: shared-properties
  hs-source-dirs: baselines
  main-is: ProductBaselineMain.hs
  ghc-options: -O2 -rtsopts -with-rtsopts=-T
  build-depends:
    base >= 4.18 && < 5
    , containers >= 0.6 && < 0.9
    , data-fix >= 0.3 && < 0.4
    , directory >= 1.3 && < 1.4
    , moonlight-algebra:finite-lattice
    , moonlight-core
    , moonlight-egraph:context
    , moonlight-egraph-core
    , moonlight-egraph:pure-saturation
    , moonlight-egraph:test-algebras
    , moonlight-sheaf:descent

test-suite egraph-obstruction-figures
  import: shared-properties
  type: exitcode-stdio-1.0
  hs-source-dirs: figures test/egraph
  main-is: ObstructionFiguresMain.hs
  other-modules:
    Moonlight.EGraph.Binding.ScopedLambdaFront
    Moonlight.EGraph.Spec.LambdaBindingGoal.Lambda
    Moonlight.EGraph.Test.Front.Mono
  build-depends:
    base >= 4.18 && < 5
    , containers >= 0.6 && < 0.9
    , data-fix >= 0.3 && < 0.4
    , directory >= 1.3 && < 1.4
    , hashable >= 1.4 && < 1.6
    , tasty >= 1.4
    , tasty-hunit >= 0.10
    , moonlight-core
    , moonlight-egraph-core
    , moonlight-egraph:test-algebras
    , moonlight-egraph:context
    , moonlight-egraph:pure-saturation
    , moonlight-rewrite:front
    , moonlight-saturation:core
    , moonlight-sheaf:core
    , moonlight-sheaf:descent
    , moonlight-sheaf:obstruction
    , moonlight-algebra:finite-lattice

common egraph-components
  build-depends:
    moonlight-egraph-core
    , moonlight-egraph:relational
    , moonlight-egraph:context
    , moonlight-egraph:extraction
    , moonlight-egraph:rewrite
    , moonlight-egraph:pure-saturation

test-suite egraph-test
  import: shared-properties, egraph-components
  type: exitcode-stdio-1.0
  hs-source-dirs: test/egraph
  main-is: Main.hs
  ghc-options: -Wall -Wcompat
  other-modules:
    Moonlight.EGraph.Binding.ScopedLambdaFront
    Moonlight.EGraph.Binding.ScopedLambdaSaturationSpec
    Moonlight.EGraph.Binding.SlottedLambdaBindingGoalSpec
    Moonlight.EGraph.Binding.SlottedUpstreamCoverageSpec
    Moonlight.EGraph.Boundary.BlueRoseSpec
    Moonlight.EGraph.Boundary.LeanKernelSpec
    Moonlight.EGraph.Boundary.ObstructionSpec
    Moonlight.EGraph.Boundary.ProofBoundarySpec
    Moonlight.EGraph.Boundary.ProofSpec
    Moonlight.EGraph.Boundary.RegistryConsistencySpec
    Moonlight.EGraph.Boundary.RewriteHolonomySpec
    Moonlight.EGraph.Context.AnnotatedDeltaSpec
    Moonlight.EGraph.Context.BladePressureFrontierSpec
    Moonlight.EGraph.Context.BodyRegionContextSpec
    Moonlight.EGraph.Context.ColoredVsSheafSpec
    Moonlight.EGraph.Context.ContextSpec
    Moonlight.EGraph.Context.ContextualSectionCacheSpec
    Moonlight.EGraph.Context.ControlledInductionSpec
    Moonlight.EGraph.Context.DescentSpec
    Moonlight.EGraph.Context.EGraphIncidenceSiteLawSpec
    Moonlight.EGraph.Context.MeshSeamDescentSpec
    Moonlight.EGraph.Context.PowersetTwinSpec
    Moonlight.EGraph.Context.RegionalUnionFindSpec
    Moonlight.EGraph.Context.VirtualFiberSpec
    Moonlight.EGraph.Core.AnalysisSpec
    Moonlight.EGraph.Core.AntiUnifySpec
    Moonlight.EGraph.Core.GraphSpec
    Moonlight.EGraph.Core.HashConsSpec
    Moonlight.EGraph.Core.PatternSpec
    Moonlight.EGraph.Core.QuotientPatchSpec
    Moonlight.EGraph.Core.RebuildPropertySpec
    Moonlight.EGraph.Core.RebuildSpec
    Moonlight.EGraph.Core.UnionFindSpec
    Moonlight.EGraph.Diagnostics.DiagnosticSpec
    Moonlight.EGraph.Diagnostics.VertexSetBenchSpec
    Moonlight.EGraph.Effect.Laws
    Moonlight.EGraph.Egg.GroupSpec
    Moonlight.EGraph.Egg.MathSpec
    Moonlight.EGraph.Egg.SimpleSpec
    Moonlight.EGraph.Extraction.ExtractionSpec
    Moonlight.EGraph.Extraction.IncrementalExtractionSpec
    Moonlight.EGraph.Extraction.WorklistSpec
    Moonlight.EGraph.Extraction.GuideSpec
    Moonlight.EGraph.Front.PackedNodeOracleSpec
    Moonlight.EGraph.Front.SDFAlgebraSpec
    Moonlight.EGraph.Front.SDFPropertySpec
    Moonlight.EGraph.Pure.Introspection.Diagnostic
    Moonlight.EGraph.Pure.Saturation.FrontSpec
    Moonlight.EGraph.Pure.Saturation.LogicSpec
    Moonlight.EGraph.Pure.Saturation.MatchingSpec
    Moonlight.EGraph.Rewrite.PresheafPathSpec
    Moonlight.EGraph.Rewrite.RepairIndexSpec
    Moonlight.EGraph.Rewrite.RewriteSpec
    Moonlight.EGraph.Rewrite.TraceLawSpec
    Moonlight.EGraph.Spec.LambdaBindingGoal
    Moonlight.EGraph.Spec.LambdaBindingGoal.Harness
    Moonlight.EGraph.Spec.LambdaBindingGoal.Lambda
    Moonlight.EGraph.Spec.LambdaBindingGoal.Spec
    Moonlight.EGraph.Test.Case
    Moonlight.EGraph.Test.Saturation.Helpers
    Moonlight.EGraph.Test.Suite
    Moonlight.EGraph.Test.Front.Group
    Moonlight.EGraph.Test.Front.Math
    Moonlight.EGraph.Test.Front.Mono
    Moonlight.EGraph.Test.Front.Ring
    Moonlight.EGraph.Test.Front.SDF
    Moonlight.EGraph.Test.Front.Tiny
  build-depends:
    base >= 4.18 && < 5
    , aeson >= 2.0 && < 2.3
    , bytestring >= 0.11 && < 0.13
    , containers >= 0.6 && < 0.9
    , directory >= 1.3 && < 1.4
    , filepath >= 1.4 && < 1.6
    , process >= 1.6 && < 1.8
    , hashable >= 1.4 && < 1.6
    , primitive >= 0.7 && < 0.10
    , vector >= 0.13 && < 0.14
    , moonlight-algebra
    , moonlight-category
    , moonlight-discrete:constraint
    , moonlight-core
    , moonlight-core:moonlight-core-automata
    , moonlight-core:moonlight-core-egraph-program
    , moonlight-delta:moonlight-delta-core
    , moonlight-differential
    , moonlight-differential:moonlight-differential-index
    , moonlight-differential:moonlight-differential-runtime
    , moonlight-differential:moonlight-differential-join
    , moonlight-egraph:test-algebras
    , moonlight-discrete:graph
    , moonlight-discrete:repair-index
    , moonlight-flow-key
    , moonlight-flow-model:moonlight-flow-model-delta
    , moonlight-flow-model:moonlight-flow-model-schema
    , moonlight-flow-plan
    , moonlight-flow-storage
    , moonlight-flow-carrier:moonlight-flow-carrier-contract
    , moonlight-flow-carrier:moonlight-flow-carrier-engine
    , moonlight-rewrite:core
    , moonlight-rewrite:algebra
    , moonlight-rewrite:front
    , moonlight-rewrite:system
    , moonlight-rewrite:proof-context
    , moonlight-saturation
    , moonlight-saturation:core
    , moonlight-saturation:obstruction
    , moonlight-saturation:protocol
    , moonlight-control
    , moonlight-control:moonlight-control-support
    , moonlight-control:moonlight-control-diagnostics
    , moonlight-control:moonlight-control-homology
    , moonlight-sheaf:core
    , moonlight-sheaf:obstruction
    , moonlight-sheaf:runtime
    , moonlight-sheaf:descent
    , moonlight-sheaf:site
    , moonlight-pale:diagnostic
    , moonlight-pale:test
    , pale-test-interop
    , moonlight-pale:test-surface
    , moonlight-pale:test-laws
    , tasty >= 1.4
    , tasty-hunit >= 0.10
    , tasty-quickcheck >= 0.10
    , QuickCheck >= 2.14
    , data-fix >= 0.3 && < 0.4

    , moonlight-algebra:finite-lattice
test-suite ring-blast-test
  import: shared-properties, egraph-components
  type: exitcode-stdio-1.0
  hs-source-dirs: test/egraph
  main-is: RingBlastMain.hs
  ghc-options: -Wall -Wcompat
  other-modules:
    Moonlight.EGraph.Diagnostics.RingBlastSpec
    Moonlight.EGraph.Test.Front.Mono
    Moonlight.EGraph.Test.Front.Ring
  build-depends:
    base >= 4.18 && < 5
    , containers >= 0.6 && < 0.9
    , hashable >= 1.4 && < 1.6
    , moonlight-algebra
    , moonlight-core
    , moonlight-egraph:test-algebras
    , moonlight-rewrite:front
    , moonlight-rewrite:system
    , moonlight-saturation:core
    , moonlight-pale:diagnostic
    , moonlight-pale:test
    , tasty >= 1.4
    , tasty-hunit >= 0.10
    , moonlight-saturation:protocol
    , moonlight-control
    , moonlight-control:moonlight-control-support
    , moonlight-control:moonlight-control-diagnostics
    , moonlight-control:moonlight-control-homology
    , data-fix >= 0.3 && < 0.4
    , moonlight-algebra:finite-lattice
